# Scalable-RecSys

./: .gitignore  Makefile  README.md  client.py  docker-compose.yml  main.py  pyproject.toml
airflow/: DOCKER_SETUP.md  Dockerfile  entrypoint.sh
airflow/dags/: README.md  dag_drift_retrain.py  dag_etl_train.py
airflow/dags/common/: __init__.py  config.py  model_utils.py
inference/: compile_artifacts.py  recs.proto  recs_pb2.py  recs_pb2_grpc.py  server.py
kafka/: Dockerfile  README.md  __init__.py  als_engine.py  config.py  job_cache.py  models.py  producer_service.py  result_service.py  worker.py
spark/: Dockerfile  README.md  entrypoint.sh
spark/apps/: common.py  create_futures.py  drift_detection.py  etl.py  test_recommender.py  train_recommender.py
spark/conf/: spark-defaults.conf
spark_jobs/: common.py  etl.py
