[project]
name = "large-scale-recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "grpcio>=1.75.0",
    "grpcio-tools>=1.75.0",
    "numpy>=2.3.3",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.1",
]
